--- a/Work/matrix.ipynb
+++ b/Work/matrix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "id": "d603403d-3ff7-4648-8674-85735eb84a93",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "4aa10601-eebd-4794-91c1-6ddb07e13785",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
        "2  17  18  19"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "id": "a9786489-4b65-41c2-8959-8d6a421f7cf7",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "id": "77f0d8f5-01f7-4b0c-82fd-eaf37b4ba889",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
        "2  17  18  19"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "id": "480957a1-714f-4b4d-a0c7-9c6e7607afa4",
    "metadata": {},
    "outputs": [],
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "id": "63dc624b-ddfd-48a3-b98a-e493bcc0af23",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
        "2  18.7  19.8  20.9"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,12 +265,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "id": "268ad288-5a2a-4e68-82be-b0a8879025ec",
    "metadata": {},
    "outputs": [],
    "source": [
-    "matrix.iloc[1::, 1::] = 10 "
+    "# matrix.iloc[1::, 1::] = 10 "
    ]
   },
   {
@@ -347,13 +347,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "27a0ea69-8729-45af-8d43-b6eeaf29213a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Augmentez de 15% les valeurs supérieur à 16 "
+    "# Augmentez de 15% les valeurs supérieur à 16 \n",
+    "\n",
+    "mask = matrix > 16\n",
+    "matrix[mask] = matrix[mask] * 1.15"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "c5f196d3-7219-42ba-9925-1ab68e143077",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>12.100</td>\n",
+       "      <td>13.200</td>\n",
+       "      <td>14.300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15.400</td>\n",
+       "      <td>18.975</td>\n",
+       "      <td>20.240</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>21.505</td>\n",
+       "      <td>22.770</td>\n",
+       "      <td>24.035</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        0       1       2\n",
+       "0  12.100  13.200  14.300\n",
+       "1  15.400  18.975  20.240\n",
+       "2  21.505  22.770  24.035"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8285200e-66a4-428b-955a-d6394f2febeb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
