--- a/Work/matrix.ipynb
+++ b/Work/matrix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "id": "d603403d-3ff7-4648-8674-85735eb84a93",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "id": "4aa10601-eebd-4794-91c1-6ddb07e13785",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
        "2  17  18  19"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "id": "a9786489-4b65-41c2-8959-8d6a421f7cf7",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "id": "77f0d8f5-01f7-4b0c-82fd-eaf37b4ba889",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
        "2  17  18  19"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "id": "480957a1-714f-4b4d-a0c7-9c6e7607afa4",
    "metadata": {},
    "outputs": [],
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "id": "63dc624b-ddfd-48a3-b98a-e493bcc0af23",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
        "2  18.7  19.8  20.9"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,18 +265,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 39,
    "id": "268ad288-5a2a-4e68-82be-b0a8879025ec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# matrix.iloc[1::, 1::] = 10 "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "3ed55a55-8fa7-46fb-8a49-9634324e49b9",
    "metadata": {},
    "outputs": [
     {
@@ -300,67 +290,60 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
        "      <th>1</th>\n",
        "      <th>2</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>12.1</td>\n",
-       "      <td>13.2</td>\n",
-       "      <td>14.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>15.4</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10.0</td>\n",
+       "      <td>16.5</td>\n",
+       "      <td>17.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>18.7</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10.0</td>\n",
+       "      <td>19.8</td>\n",
+       "      <td>20.9</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      0     1     2\n",
-       "0  12.1  13.2  14.3\n",
-       "1  15.4  10.0  10.0\n",
-       "2  18.7  10.0  10.0"
+       "      1     2\n",
+       "1  16.5  17.6\n",
+       "2  19.8  20.9"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# start:step:end\n",
-    "matrix"
+    "# Modifier une partie de la matrice\n",
+    "# matrix.iloc[1::, 1::] = 10 \n",
+    "\n",
+    "# Affichez une sous-matrice\n",
+    "matrix.iloc[1::, 1::]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 40,
    "id": "27a0ea69-8729-45af-8d43-b6eeaf29213a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Augmentez de 15% les valeurs supérieur à 16 \n",
     "\n",
-    "mask = matrix > 16\n",
-    "matrix[mask] = matrix[mask] * 1.15"
+    "mask = matrix > 16 # filtrage \n",
+    "matrix[mask] = matrix[mask] * 1.15 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "id": "c5f196d3-7219-42ba-9925-1ab68e143077",
    "metadata": {},
    "outputs": [
@@ -420,7 +403,7 @@
        "2  21.505  22.770  24.035"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
