--- a/Work/projet.ipynb
+++ b/Work/projet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "8581a5f5-116c-4ee0-988f-5750404f8eb4",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,12 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "names = pd.read_csv('./names/yob1880.txt', names=['name', 'sex', 'birth'])"
+    "names1880 = pd.read_csv('./names/yob1880.txt', names=['name', 'sex', 'birth'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "5b61430e-ca61-4089-b9ec-ce2e65f339b0",
    "metadata": {},
    "outputs": [
@@ -89,13 +89,13 @@
        "4     Minnie   F   1746"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "names.head()"
+    "names1880.head()"
    ]
   },
   {
@@ -105,8 +105,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercice en utilisant la méthode conc"
+    "# Exercice en utilisant la méthode concat de pandas créer un DataFrame names de l'ensemble des fichiers"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2ace2c3-549a-4c6b-ab12-b4ae162a08f5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
