--- a/Work/projet.ipynb
+++ b/Work/projet.ipynb
@@ -114,6 +114,129 @@
    "id": "c2ace2c3-549a-4c6b-ab12-b4ae162a08f5",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "df1, df2, df3\n",
+    "\n",
+    "DF = pd.concat([df1, df2, df3])\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "632d633c-f232-41d3-86d0-7c8570fc460d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns = [ 'name', 'sex', 'birth']\n",
+    "yobs = []\n",
+    "for year in range(1880, 2019):\n",
+    "    df = pd.read_csv(f\"./names/yob{year}.txt\", names = columns)\n",
+    "    df['year'] = year\n",
+    "    yobs.append(df)\n",
+    "\n",
+    "names = pd.concat(yobs, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "5c7be2aa-8df7-49ac-bb45-8bdf0dc86c3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>birth</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1957041</th>\n",
+       "      <td>Zylas</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1957042</th>\n",
+       "      <td>Zyran</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1957043</th>\n",
+       "      <td>Zyrie</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1957044</th>\n",
+       "      <td>Zyron</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1957045</th>\n",
+       "      <td>Zzyzx</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          name sex  birth  year\n",
+       "1957041  Zylas   M      5  2018\n",
+       "1957042  Zyran   M      5  2018\n",
+       "1957043  Zyrie   M      5  2018\n",
+       "1957044  Zyron   M      5  2018\n",
+       "1957045  Zzyzx   M      5  2018"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "names.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d46cbfa-2d79-435c-98e7-5a98920d0062",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
