--- a/Work/projet.ipynb
+++ b/Work/projet.ipynb
@@ -137,6 +137,8 @@
     "    df['year'] = year\n",
     "    yobs.append(df)\n",
     "\n",
+    "# Lors de la concaténation il est souhaitable de réinitialiser les index pour qu'ils soient séquentiels dans \n",
+    "# dans le DataFrame résultant.\n",
     "names = pd.concat(yobs, ignore_index=True)"
    ]
   },
