--- a/Work/matrix.ipynb
+++ b/Work/matrix.ipynb
@@ -414,11 +414,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "8285200e-66a4-428b-955a-d6394f2febeb",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    A   B   C   D   E   F   G   H   I   J\n",
+      "a  13  54  23  23  62  29  53  15  54  67\n",
+      "b  13  54  23  23  62  29  53  15  54  67\n",
+      "c  98  36  34  40  13  92  41  61  94  62\n",
+      "d  33  87  46  44  82  87  11  76  76  21\n",
+      "e  56  16  13  91  64  13  77  44  44  27\n",
+      "f  56  16  13  91  64  13  77  44  44  27\n",
+      "g  15  87  20  50  53  48  39  38  91  32\n",
+      "h  93  48  28  27  50  55  28  38  78  85\n",
+      "i  76  58  26  89  88  71  97  80  42  52\n",
+      "j  76  58  26  89  88  71  97  80  42  52\n",
+      "k  38  98  55  61  75  82  37  64  87  83\n",
+      "l  24  53  16  84  82  13  18  18  82  51\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = [\n",
+    "    [13, 54, 23, 23, 62, 29, 53, 15, 54, 67],\n",
+    "    [13, 54, 23, 23, 62, 29, 53, 15, 54, 67],\n",
+    "    [98, 36, 34, 40, 13, 92, 41, 61, 94, 62],\n",
+    "    [33, 87, 46, 44, 82, 87, 11, 76, 76, 21],\n",
+    "    [56, 16, 13, 91, 64, 13, 77, 44, 44, 27],\n",
+    "    [56, 16, 13, 91, 64, 13, 77, 44, 44, 27],\n",
+    "    [15, 87, 20, 50, 53, 48, 39, 38, 91, 32],\n",
+    "    [93, 48, 28, 27, 50, 55, 28, 38, 78, 85],\n",
+    "    [76, 58, 26, 89, 88, 71, 97, 80, 42, 52],\n",
+    "    [76, 58, 26, 89, 88, 71, 97, 80, 42, 52],\n",
+    "    [38, 98, 55, 61, 75, 82, 37, 64, 87, 83],\n",
+    "    [24, 53, 16, 84, 82, 13, 18, 18, 82, 51]\n",
+    "]\n",
+    "\n",
+    "index_labels = list(\"abcdefghijkl\")\n",
+    "column_labels = list(\"ABCDEFGHIJ\")\n",
+    "\n",
+    "df = pd.DataFrame(data, index=index_labels, columns=column_labels)\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66439537-a998-4836-9cf4-3261923d345e",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# suppression des lignes identiques\n",
+    "df_no_duplicates = df.drop_duplicates()"
+   ]
   }
  ],
  "metadata": {
