--- a/Work/TP/01_temperature.ipynb
+++ b/Work/TP/01_temperature.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "3180d54c-3f4e-4528-a2e1-9b7676bd82b3",
    "metadata": {},
    "outputs": [
@@ -86,38 +86,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    Temperature  Temperature_sup_0  Day\n",
-      "0          -2.0                  0    1\n",
-      "1           5.0                  1    2\n",
-      "2          -5.0                  0    3\n",
-      "3           6.0                  1    4\n",
-      "4          -2.0                  0    5\n",
-      "5           0.0                  0    6\n",
-      "6           6.0                  1    7\n",
-      "7           2.0                  1    8\n",
-      "8           8.0                  1    9\n",
-      "9           0.0                  0   10\n",
-      "10          6.0                  1   11\n",
-      "11         -1.0                  0   12\n",
-      "12          3.0                  1   13\n",
-      "13          3.0                  1   14\n",
-      "14          7.0                  1   15\n",
-      "15          0.0                  0   16\n",
-      "16         -5.0                  0   17\n",
-      "17          7.0                  1   18\n",
-      "18          4.0                  1   19\n",
-      "19          7.0                  1   20\n",
-      "20          8.0                  1   21\n",
-      "21         -1.0                  0   22\n",
-      "22          5.0                  1   23\n",
-      "23         -2.0                  0   24\n",
-      "24          3.0                  1   25\n",
-      "25         -3.0                  0   26\n",
-      "26         -2.0                  0   27\n",
-      "27          7.0                  1   28\n",
-      "28          8.0                  1   29\n",
-      "29          4.0                  1   30\n",
-      "30          2.0                  1   31\n"
+      "    Temperature  Temperature_sup_0\n",
+      "0          -2.0                  0\n",
+      "1           5.0                  1\n",
+      "2          -5.0                  0\n",
+      "3           6.0                  1\n",
+      "4          -2.0                  0\n",
+      "5           0.0                  0\n",
+      "6           6.0                  1\n",
+      "7           2.0                  1\n",
+      "8           8.0                  1\n",
+      "9           0.0                  0\n",
+      "10          6.0                  1\n",
+      "11         -1.0                  0\n",
+      "12          3.0                  1\n",
+      "13          3.0                  1\n",
+      "14          7.0                  1\n",
+      "15          0.0                  0\n",
+      "16         -5.0                  0\n",
+      "17          7.0                  1\n",
+      "18          4.0                  1\n",
+      "19          7.0                  1\n",
+      "20          8.0                  1\n",
+      "21         -1.0                  0\n",
+      "22          5.0                  1\n",
+      "23         -2.0                  0\n",
+      "24          3.0                  1\n",
+      "25         -3.0                  0\n",
+      "26         -2.0                  0\n",
+      "27          7.0                  1\n",
+      "28          8.0                  1\n",
+      "29          4.0                  1\n",
+      "30          2.0                  1\n"
      ]
     }
    ],
@@ -127,66 +127,358 @@
     "\n",
     "\n",
     "january['Temperature_sup_0'] = (january['Temperature']  > 0 ).astype(int)\n",
-    "january['Day'] = january.index + 1\n",
+    "\n",
     "print(january)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "1e872284-e59a-49c2-b297-37d4ca6ac744",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Temperature_sup_0</th>\n",
+       "      <th>Group</th>\n",
+       "      <th>Day</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-5.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>-5.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>16</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>17</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>17</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>18</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>18</td>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>18</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>18</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0      1\n",
-       "1      2\n",
-       "2      3\n",
-       "3      4\n",
-       "4      5\n",
-       "5      5\n",
-       "6      6\n",
-       "7      6\n",
-       "8      6\n",
-       "9      7\n",
-       "10     8\n",
-       "11     9\n",
-       "12    10\n",
-       "13    10\n",
-       "14    10\n",
-       "15    11\n",
-       "16    11\n",
-       "17    12\n",
-       "18    12\n",
-       "19    12\n",
-       "20    12\n",
-       "21    13\n",
-       "22    14\n",
-       "23    15\n",
-       "24    16\n",
-       "25    17\n",
-       "26    17\n",
-       "27    18\n",
-       "28    18\n",
-       "29    18\n",
-       "30    18\n",
-       "Name: Temperature_sup_0, dtype: int64"
+       "    Temperature  Temperature_sup_0  Group  Day\n",
+       "0          -2.0                  0      1    1\n",
+       "1           5.0                  1      2    2\n",
+       "2          -5.0                  0      3    3\n",
+       "3           6.0                  1      4    4\n",
+       "4          -2.0                  0      5    5\n",
+       "5           0.0                  0      5    6\n",
+       "6           6.0                  1      6    7\n",
+       "7           2.0                  1      6    8\n",
+       "8           8.0                  1      6    9\n",
+       "9           0.0                  0      7   10\n",
+       "10          6.0                  1      8   11\n",
+       "11         -1.0                  0      9   12\n",
+       "12          3.0                  1     10   13\n",
+       "13          3.0                  1     10   14\n",
+       "14          7.0                  1     10   15\n",
+       "15          0.0                  0     11   16\n",
+       "16         -5.0                  0     11   17\n",
+       "17          7.0                  1     12   18\n",
+       "18          4.0                  1     12   19\n",
+       "19          7.0                  1     12   20\n",
+       "20          8.0                  1     12   21\n",
+       "21         -1.0                  0     13   22\n",
+       "22          5.0                  1     14   23\n",
+       "23         -2.0                  0     15   24\n",
+       "24          3.0                  1     16   25\n",
+       "25         -3.0                  0     17   26\n",
+       "26         -2.0                  0     17   27\n",
+       "27          7.0                  1     18   28\n",
+       "28          8.0                  1     18   29\n",
+       "29          4.0                  1     18   30\n",
+       "30          2.0                  1     18   31"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(january['Temperature_sup_0'] != january['Temperature_sup_0'].shift()).cumsum()"
+    "january['Group'] = (january['Temperature_sup_0'] != january['Temperature_sup_0'].shift()).cumsum()\n",
+    "\n",
+    "january['Day'] = january.index + 1\n",
+    "\n",
+    "# january"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "6be55146-acc0-49c3-8e49-d4caa0dc3dcb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = len( january[january['Temperature'] > 0].groupby('Group')['Day'].apply(list).max() )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "eab68eac-6944-4d47-aa4c-b5e995197445",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "003098ab-69f7-4076-8069-075bfacaac56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask = january[january['Temperature'] > 0].groupby('Group')['Day'].apply(lambda x : len(x)) == m"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6be55146-acc0-49c3-8e49-d4caa0dc3dcb",
+   "id": "fd1e1d0e-710a-41af-a706-3a7b32b24f0f",
    "metadata": {},
    "outputs": [],
    "source": []
