--- a/Work/TP/01_temperature.ipynb
+++ b/Work/TP/01_temperature.ipynb
@@ -78,62 +78,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "id": "3180d54c-3f4e-4528-a2e1-9b7676bd82b3",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    Temperature  Temperature_sup_0\n",
-      "0          -2.0                  0\n",
-      "1           5.0                  1\n",
-      "2          -5.0                  0\n",
-      "3           6.0                  1\n",
-      "4          -2.0                  0\n",
-      "5           0.0                  0\n",
-      "6           6.0                  1\n",
-      "7           2.0                  1\n",
-      "8           8.0                  1\n",
-      "9           0.0                  0\n",
-      "10          6.0                  1\n",
-      "11         -1.0                  0\n",
-      "12          3.0                  1\n",
-      "13          3.0                  1\n",
-      "14          7.0                  1\n",
-      "15          0.0                  0\n",
-      "16         -5.0                  0\n",
-      "17          7.0                  1\n",
-      "18          4.0                  1\n",
-      "19          7.0                  1\n",
-      "20          8.0                  1\n",
-      "21         -1.0                  0\n",
-      "22          5.0                  1\n",
-      "23         -2.0                  0\n",
-      "24          3.0                  1\n",
-      "25         -3.0                  0\n",
-      "26         -2.0                  0\n",
-      "27          7.0                  1\n",
-      "28          8.0                  1\n",
-      "29          4.0                  1\n",
-      "30          2.0                  1\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0     NaN\n",
+       "1     0.0\n",
+       "2     1.0\n",
+       "3     0.0\n",
+       "4     1.0\n",
+       "5     0.0\n",
+       "6     0.0\n",
+       "7     1.0\n",
+       "8     1.0\n",
+       "9     1.0\n",
+       "10    0.0\n",
+       "11    1.0\n",
+       "12    0.0\n",
+       "13    1.0\n",
+       "14    1.0\n",
+       "15    1.0\n",
+       "16    0.0\n",
+       "17    0.0\n",
+       "18    1.0\n",
+       "19    1.0\n",
+       "20    1.0\n",
+       "21    1.0\n",
+       "22    0.0\n",
+       "23    1.0\n",
+       "24    0.0\n",
+       "25    1.0\n",
+       "26    0.0\n",
+       "27    0.0\n",
+       "28    1.0\n",
+       "29    1.0\n",
+       "30    1.0\n",
+       "Name: Temperature_sup_0, dtype: float64"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "january = pd.DataFrame({'Temperature': [-2,  5, -5,  6, -2,  0,  6,  2,  8,  0,  6, -1,  3,  3,  7,  0, -5,\n",
     "                                        7,  4,  7,  8, -1,  5, -2,  3, -3, -2,  7,  8,  4,  2]}, dtype='float64')\n",
     "\n",
-    "\n",
     "january['Temperature_sup_0'] = (january['Temperature']  > 0 ).astype(int)\n",
     "\n",
-    "print(january)\n"
+    "january['Temperature_sup_0'].shift()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "id": "1e872284-e59a-49c2-b297-37d4ca6ac744",
    "metadata": {},
    "outputs": [
@@ -421,26 +423,44 @@
        "30          2.0                  1     18   31"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "january['Group'] = (january['Temperature_sup_0'] != january['Temperature_sup_0'].shift()).cumsum()\n",
-    "\n",
+    "january['Group'] = ( january['Temperature_sup_0'] != january['Temperature_sup_0'].shift() ).cumsum()\n",
     "january['Day'] = january.index + 1\n",
-    "\n",
-    "# january"
+    "january"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "id": "6be55146-acc0-49c3-8e49-d4caa0dc3dcb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Group\n",
+      "2                  [2]\n",
+      "4                  [4]\n",
+      "6            [7, 8, 9]\n",
+      "8                 [11]\n",
+      "10        [13, 14, 15]\n",
+      "12    [18, 19, 20, 21]\n",
+      "14                [23]\n",
+      "16                [25]\n",
+      "18    [28, 29, 30, 31]\n",
+      "Name: Day, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
+    "print(january[january['Temperature'] > 0].groupby('Group')['Day'].apply(list))\n",
+    "\n",
     "m = len( january[january['Temperature'] > 0].groupby('Group')['Day'].apply(list).max() )"
    ]
   },
@@ -477,8 +497,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "fd1e1d0e-710a-41af-a706-3a7b32b24f0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Group\n",
+       "2     False\n",
+       "4     False\n",
+       "6     False\n",
+       "8     False\n",
+       "10    False\n",
+       "12     True\n",
+       "14    False\n",
+       "16    False\n",
+       "18     True\n",
+       "Name: Day, dtype: bool"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "3663b32e-9e6c-4b07-80ed-dc114829f1a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Group\n",
+       "12    [18, 19, 20, 21]\n",
+       "18    [28, 29, 30, 31]\n",
+       "Name: Day, dtype: object"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "january[january['Temperature'] > 0].groupby('Group')['Day'].apply(list)[mask]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d49e981-ec15-4630-b833-ec850c0016d7",
    "metadata": {},
    "outputs": [],
    "source": []
